--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,12 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
-    <title>Ping Pong</title>
+    <title>Simon</title>
   </head>
   <body>
-    <form id="ping-pong-form">
-      <label for="goal">Enter a number:</label>
-      <input id="goal" type="number">
-      <button type="submit">Submit</button>
-    </form>
-    <ul id="solution"></ul>
+      <button type="button" id="redButton" name="red">Red</button>
+      <button type="button" id="blueButton" name="blue">Blue</button>
+      <button type="button"  id="greenButton" name="green">Green</button>
+      <button type="button" id="yellowButton" name="yellow">Yellow</button>
   </body>
 </html>
