got buttons working?

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
     <title>Simon</title>
   </head>
   <body>
-      <button type="button" id="redButton" name="red">Red</button>
-      <button type="button" id="blueButton" name="blue">Blue</button>
-      <button type="button"  id="greenButton" name="green">Green</button>
-      <button type="button" id="yellowButton" name="yellow">Yellow</button>
+    <div class="simon-buttons">
+      <button type="button" id="redButton" class ="buttons" stuff="red">Red</button>
+      <button type="button" id="blueButton" class ="buttons" stuff="blue">Blue</button>
+      <button type="button"  id="greenButton" class ="buttons" stuff="green">Green</button>
+      <button type="button" id="yellowButton" class ="buttons"  stuff="yellow">Yellow</button>
+      <button type="button" id="startButton" class ="buttons" stuff="start">Start</button>
+    </div>
   </body>
 </html>
