create framework of better comparison function

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="bundle.js"></script>
     <title>Simon</title>
   </head>
   <body>
     <div class="simon-buttons">
-      <button type="button" id="redButton" class ="buttons" stuff="red">Red</button>
-      <button type="button" id="blueButton" class ="buttons" stuff="blue">Blue</button>
-      <button type="button"  id="greenButton" class ="buttons" stuff="green">Green</button>
-      <button type="button" id="yellowButton" class ="buttons"  stuff="yellow">Yellow</button>
+      <button type="button" id="redButton" class ="buttons red" stuff="red">Red</button>
+      <button type="button" id="blueButton" class ="buttons blue" stuff="blue">Blue</button>
+      <button type="button"  id="greenButton" class ="buttons green" stuff="green">Green</button>
+      <button type="button" id="yellowButton" class ="buttons yellow"  stuff="yellow">Yellow</button>
       <button type="button" id="startButton" class ="buttons" stuff="start">Start</button>
+    </div>
+    <div class="squares">
+      <p>"its me"</p>
     </div>
   </body>
 </html>
