seperate js files, and introduce logic

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <!-- <script type="text/javascript" src="bundle.js"></script> -->
     <title>Simon</title>
   </head>
   <body>
@@ -10,10 +11,14 @@
       <button type="button" id="blueButton" class ="buttons blue" stuff="blue">Blue</button>
       <button type="button"  id="greenButton" class ="buttons green" stuff="green">Green</button>
       <button type="button" id="yellowButton" class ="buttons yellow"  stuff="yellow">Yellow</button>
-      <button type="button" id="startButton" class ="buttons" stuff="start">Start</button>
+      <button type="button" id="startButton" stuff="start">Start</button>
     </div>
     <div class="squares">
-      <p>"its me"</p>
+      <p>" Colors should happen below"</p>
+    </div>
+    <div class="outs">
+      <ul>
+      </ul>
     </div>
   </body>
 </html>
